kustomize set image to w281722735/flask-demo:03a0da7f12140e10f2c0bbda52eddb2e046c6e10

--- a/secret/kustomization.yaml
+++ b/secret/kustomization.yaml
@@ -8,3 +8,5 @@ resources:
 images:
 - name: 364950776/flask-demo
   newTag: 4e3c18c73f15a59d7ad924682949ca3143025ab7
+- name: w281722735/flask-demo
+  newTag: 03a0da7f12140e10f2c0bbda52eddb2e046c6e10
